--- a/src/app.css
+++ b/src/app.css
@@ -59,7 +59,7 @@ nav >a:after {
   content:'!';
   position: absolute;
 }
-
+/* 
 h1 {
   font-style: italic;
   background-color: var(--green);
@@ -136,9 +136,19 @@ footer {
   margin-top: 3rem;
   font-size: 0.75rem;
   text-align: center;
-}
+} */
 
 .calendar-day--not-current {
   background-color: var(--grey-100);
   color: var(--grey-300);
+}
+
+.calendar-day--today {
+  padding-top: 4px;
+}
+
+.calendar-day--today > div {
+  color: #fff;
+  border-radius: 9999px;
+  background-color: var(--grey-800);
 }
