--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,13 @@
   --green: #a4b696;
   --cloud: #fcf6f5;
   --mid: #343243;
+
+  --grey-100: #e4e9f0;
+  --grey-200: #cfd7e3;
+  --grey-300: #b5c0cd;
+  --grey-800: #3e4e63;
+  --grid-gap: 1px;
+  --day-label-size: 20px;
 }
  
 html {
@@ -59,7 +66,7 @@ nav >a:after {
   content:'!';
   position: absolute;
 }
-/* 
+
 h1 {
   font-style: italic;
   background-color: var(--green);
@@ -71,84 +78,8 @@ h2 {
   font-size: 1.75rem;
 }
 
-#newtodo {
-  display: grid;
-  grid-template-columns: 55% 20% 25%;
-  grid-gap: 2rem;
-}
-
-#newtodo >a {
-  text-align: center;
-  background-color: var(--cloud);
-}
-
-#newtodo >input {
-  border-bottom: 6px solid var(--green);
-}
-
-#newtodo >button {
-  border-bottom: 6px solid var(--brown);
- height: auto;
-}
-
-li {
-  display: grid;
-  grid-template-columns: 5% 45% 21% 7.5% 7.5%;
-  grid-template-rows: auto;
-  grid-gap: 2rem;
-  margin-bottom: 5%;
-  padding: 10px;
-  padding-right: 0px;
-  margin-right: 0px;
-  font-size: 2vh;
-  border: 2px solid var(--green);
-}
-
-li >span {
-  text-align: left;
-  padding-top: 1vh;
-  padding-left: 2%;
-}
-
-li >button {
-  height: 5vh;
-}
-
-button {
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  border: none;
-  background-color: var(--cloud);
-  font-size: 2vh;
-  width: auto;
-}
-
-input {
-  outline: none;
-  border: none;
-  background-color: var(--cloud);
-  border-radius: 0;
-  line-height: 1.3;
-  padding: 10px;
-  padding: .6em 1.4em .5em .8em;
-}
-
 footer {
   margin-top: 3rem;
   font-size: 0.75rem;
   text-align: center;
-} */
-
-.calendar-day--not-current {
-  background-color: var(--grey-100);
-  color: var(--grey-300);
-}
-
-.calendar-day--today {
-  padding-top: 4px;
-}
-
-.calendar-day--today > div {
-  color: #fff;
-  border-radius: 9999px;
-  background-color: var(--grey-800);
 }
