--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,7 @@ header {
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  height: 5rem;
+  height: 6rem;
   background-color: var(--green);
   color: var(--cloud);
 }
@@ -49,6 +49,9 @@ nav {
   left: 50%;
   transform: translateX(-50%);
   color: var(--mid);
+  width: 100%;
+  border: 5px solid var(--brown);
+  background-color: var(--brown);
 }
    
 nav >a {
@@ -72,6 +75,8 @@ h1 {
   background-color: var(--green);
   color: var(--mid);
   font-size: 2rem;
+  margin-bottom: 0%;
+  border-bottom: 5px solid var(--green);
 }
 
 h2 {
