--- a/src/app.css
+++ b/src/app.css
@@ -32,9 +32,10 @@ header {
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  height: 5.5rem;
+  height: 4rem;
   background-color: var(--grayheader);
   color: var(--greenmid);
+  z-index: 9;
 }
    
 nav {
@@ -47,6 +48,7 @@ nav {
   color: var(--greenwhite);
   width: 100%;
   background-color: var(--greenmid);
+  padding: 10px;
 }
    
 nav >a {
@@ -72,8 +74,7 @@ h1 {
   background-color: var(--grayheader);
   color: var(--greenmid);
   font-size: 2rem;
-  margin-bottom: 0%;
-  border-bottom: 5px solid var(--greenmid);
+  margin: 0%;
 }
 
 h2 {
@@ -84,6 +85,7 @@ footer {
   margin-top: 3rem;
   font-size: 0.75rem;
   text-align: center;
+  bottom: 0;
 }
 
 .flatpickr-calendar {
